Align BT Resolved

--- a/packages/cogo-academy/page-components/CreateFAQ/Analytics/Tabbase/Questions/AllTopicCardView/AllTopics/ViewCardsList/styles.module.css
+++ b/packages/cogo-academy/page-components/CreateFAQ/Analytics/Tabbase/Questions/AllTopicCardView/AllTopics/ViewCardsList/styles.module.css
@@ -108,8 +108,6 @@
 
 .primary_right {
 	display: flex;
-	flex-basis: 38%;
-	flex-direction: column;
 	justify-content: space-between;
 	height: 100%;
 	margin: 1.05%;
@@ -134,7 +132,6 @@
 	margin-bottom: 10px;
 	font-size: 14px;
 	font-weight: 600;
-	text-align: center;
 }
 
 .right_stat_content {
@@ -143,7 +140,6 @@
 	justify-content: space-between;
 	width: 100%;
 	margin-top: 5px;
-	text-align: center;
 }
 
 .right_stat_label {
@@ -184,7 +180,6 @@
 .ticket_container {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
 	justify-content: space-between;
 	width: 100%;
 	height: fit-content;
@@ -196,10 +191,12 @@
 
 .sub_heading {
 	flex-wrap: wrap;
+	text-align: left;
+	align-items: left;
 	justify-content: space-between;
 	font-size: 12px;
 	font-weight: 600;
-	text-align: left;
+	
 }
 
 .ticket_details {
